
class Airplane:
    def __init__(self, id, name, type):
        self.id = id
        self.name = name
        self.type = type
