class AirplaneType:
    def __init__(self, type, manufacturer, capacity):
        self.type = type
        self.manufacturer = manufacturer
        self.capacity = capacity
