
class Destination:
    def __init__(self, id, city, airport, country, distance, travel_time, contact_name, contact_phone_number):
        self.id = id
        self.city = city
        self.airport = airport
        self.country = country
        self.distance = distance
        self.travel_time = travel_time
        self.contact_name = contact_name
        self.contact_phone_number = contact_phone_number
