# pretty empty for now, as more requirements are implemented, this will be used a lot.
class FlightAttendant:
    def __init__(self, id, attendant_role):
        self.id = id
        self.attendant_role = attendant_role
