# pretty empty for now, as more requirements are implemented, this will be used a lot.
class Pilot:
    def __init__(self, id, pilot_role, airplane_type):
        self.id = id
        self.pilot_role = pilot_role
        self.airplane_type = airplane_type
